2001-03-26  Larry Jones  <larry.jones@sdrc.com>

	* classify.c (Classify_File): Don't report a conflict for a removed
	file when piping.  Also simplify the code structure.
	(Reported by Milos Kleint <milos.kleint@netbeans.com>.)
	* sanity.sh (rmadd2-14[abc]): New tests for above.

2001-03-24  Noel Cragg  <noel@shave.cnet.com>

	* diff.c: mods to allow `-T' and `-y' options to be passed through
	to the diff library.  This wasn't allowed earlier because of a
	similarly named options that got passed through to the old rcs
	programs.  We've long since stopped sending `-T' to any rcs
	utility and have never used `-y'.  Any users of moldly CVS
	versions which used to support `-T' have (hopefully) upgraded to
	one where that option isn't supported.  It seems reasonable to
	enable them again and pass them through.  (sanity.sh still works
	anyways...)
	(longopts): add short option equivalents for --initial-tab and
	--side-by-side.
	(diff): add new short options to getopt string and switch
	statement.

2001-03-22  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh: Add check for ${DOTSTAR} with large matches.

2001-03-23  Derek Price  <dprice@collab.net>

	* sanity.sh: Do the same as below for $keep.

2001-03-23  Derek Price  <dprice@collab.net>

	* sanity.sh: Replace 'remote=(yes|no)' with 'remote=(:|false)' since
	often 'false' and more often ':' are shell builtins.  This makes the
	succinct, 'if $remote; then' faster than 'if test $remote = yes; then'.
	Alter tests in the rest of the script to match the new usage.  Added
	a suffix of 'r' to remote test names when it was appropriate and I
	remembered.  Some reformatting.

2001-03-22  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (diffmerge1_yours, diffmerge1_mine): Check for exact
	output instead of using wildcards to avoid buffer overflows in some
	versions of expr.

2001-03-21  Derek Price  <dprice@collab.net>

	* sanity.sh: cd to '/tmp' again rather than $HOME since HOME was set to